--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
 
 	<!-- MODAL
 	================================================ -->
-	<section></section>
+	<div></div>
+
+	<!-- BOOTSTRAP CORE JAVASCRIPT
+	Placed at the end of the document so the pages load faster
+	================================================ -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="assets/js/jquery-3.1.1.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
