--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 	<![endif]-->
 
 	<title>Boostrap to WordPress</title>
+
+	<!-- FontAwesome Icons -->
+	<link href="assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 
