--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
 	<!-- FontAwesome Icons -->
 	<link href="assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
 </head>
 <body>
 
