--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 	<!-- FontAwesome Icons -->
 	<link href="assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
+	<!-- Custom CSS -->
+	<link rel="stylesheet" href="assets/css/custom.css">
+
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
 </head>
@@ -60,7 +63,36 @@
 
 	<!-- HERO
 	================================================ -->
-	<section></section>
+	<section id="hero">
+		<article>
+			<div class="container clearfix">
+				<div class="row">
+					<div class="col-sm-5">
+						<img src="assets/img/logo-badge.png" alt="Bootstrap to WordPress" class="logo">
+					</div><!-- col -->
+					<div class="col-sm-7 hero-text">
+						<h1>Bootstrap to WordPress</h1>
+						<p class="lead">My Very Own Coded Responsive Website &amp; Custom WordPress Websites with Boostrap</p>
+						<div id="price-timeline">
+							<div class="price active">
+								<h4>Pre-Launch<small>Ends soon!</small></h4>
+								<span>$149</span>
+							</div><!-- price -->
+							<div class="price">
+								<h4>Launch Price<small>Coming soon!</small></h4>
+								<span>$299</span>
+							</div><!-- price -->
+							<div class="price">
+								<h4>Final Price<small>Coming soon!</small></h4>
+								<span>$399</span>
+							</div><!-- price -->
+						</div><!-- price-timeline -->
+						<p><a class="btn btn-lg btn-danger" href="/" role="button">Enroll &raquo;</a></p>
+					</div><!-- col -->
+				</div><!-- row -->
+			</div><!-- container -->
+		</article>
+	</section><!-- hero -->
 
 	<!-- OPT IN SECTION
 	================================================ -->
