created parallax scrolling effects

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 	<!-- HERO
 	================================================ -->
-	<section id="hero">
+	<section id="hero" data-type="background" data-speed="5">
 		<article>
 			<div class="container clearfix">
 				<div class="row">
@@ -96,7 +96,19 @@
 
 	<!-- OPT IN SECTION
 	================================================ -->
-	<section></section>
+	<section>
+		<div class="container">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut quis luctus felis, id feugiat sem. Phasellus lacus arcu, sagittis vitae nibh at, scelerisque feugiat arcu. Etiam finibus interdum dui id ultricies. Donec hendrerit dignissim augue, sed suscipit sem posuere nec. Phasellus tempor arcu vitae erat pharetra scelerisque. Aliquam dictum non urna id consequat. Etiam tincidunt lectus ligula, at faucibus tellus hendrerit id. Donec condimentum dolor in ligula maximus, at congue lacus cursus. Etiam at lectus vel mi ultrices imperdiet quis eu turpis. Quisque ut consequat est. Integer eros magna, viverra id erat ac, tincidunt ultrices ante. Donec turpis ante, aliquet nec dui ut, dignissim iaculis ligula. Quisque eget sem vel risus scelerisque feugiat at quis arcu. Quisque tincidunt orci nec pharetra ornare. Etiam auctor sollicitudin nisi.
+
+			Curabitur consequat odio ornare sapien mollis, quis lobortis quam eleifend. Maecenas ex diam, volutpat ut enim non, bibendum tincidunt sapien. Morbi venenatis dapibus lorem a venenatis. Fusce vehicula euismod ultricies. In rhoncus nulla est, sed pellentesque purus faucibus vitae. Curabitur et tortor gravida, blandit tellus id, dictum sapien. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut suscipit nec nisi ut vestibulum.
+
+			Vestibulum quis convallis neque. Duis dapibus odio eget pretium laoreet. Morbi bibendum tortor ac lectus vehicula, pellentesque posuere velit facilisis. Ut ultricies eros sagittis, luctus sapien et, euismod sapien. In eget augue purus. Nulla nisl orci, iaculis auctor metus eget, posuere volutpat mauris. Maecenas accumsan nisl eget turpis facilisis, finibus mattis ex luctus.
+
+			Sed aliquam pharetra lorem, at rutrum lorem. Nunc lobortis dictum pharetra. Etiam tincidunt, arcu et varius cursus, velit purus pulvinar justo, in blandit dui ipsum a eros. Nunc ac placerat nunc. Pellentesque leo lorem, pretium a rhoncus vel, tempus id quam. Maecenas imperdiet vehicula orci, volutpat molestie elit viverra quis. Sed lacus dolor, rhoncus eu suscipit quis, auctor ut augue. Nulla vitae quam pellentesque, rutrum lacus eget, rutrum sapien. Aliquam justo nunc, lobortis ac pulvinar nec, convallis sed velit.
+
+			Duis rutrum sem lacus, nec suscipit quam condimentum ac. Aenean vel ullamcorper magna. Duis ut tempus odio. Sed congue, nisl eget viverra convallis, arcu mauris suscipit arcu, ut vestibulum sapien elit eu velit. Donec sollicitudin et nisl scelerisque hendrerit. Donec tristique auctor ipsum sit amet luctus. Maecenas commodo tincidunt semper. Nunc porta dolor leo, nec sagittis eros dictum vel. Aenean congue finibus egestas. Ut quis imperdiet nunc, at semper sapien. Duis consequat dui ex, non rutrum nisi consectetur vitae.
+		</div>
+	</section>
 
 
 	<!-- BOOST YOUR INCOME
