--- a/index.html
+++ b/index.html
@@ -159,13 +159,40 @@
 
 	<!-- MODAL
 	================================================ -->
-	<div></div>
+	<div class="modal fade" id="myModal">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					<h4 class="modal-title" id="myModalLabel"><i class="fa fa-envelope"> Subscrbe to our mailing list</i></h4>
+				</div><!-- modal-header -->
+				<div class="modal-body">
+					<p>Simply enter your name and email! As a thank you for joining us, we're going to give you one of the best selling-courses, <em>for free!</em></p>
+					<form class="form-inline" role="form">
+						<div class="form-group">
+							<label class="sr-only" for="subscribe-name">Your first name</label>
+							<input type="text" class="form-control" id="subscribe-name" placeholder="your first name">
+						</div><!-- form-group -->
+						<div class="form-group">
+							<label class="sr-only" for="subscribe-email">Your email</label>
+							<input type="text" class="form-control" id="subscribe-email" placeholder="your email">
+						</div><!-- form-group -->
+						<input type="submit" class="btn btn-danger" value="Subscribe!">
+						<hr>
+						<p><small>By providing your email you consent to receiving  occasional promotional email &amp; newsletters. <br> No spam. Just good stuff. We respect your privacy &amp; you may unsubscribe at any time.</small></p>
+					</form>
+				</div><!-- modal-body -->
+			</div><!-- modal-content -->
+		</div><!-- modal-dialog -->
+	</div><!-- modal -->
 
 	<!-- BOOTSTRAP CORE JAVASCRIPT
 	Placed at the end of the document so the pages load faster
 	================================================ -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="assets/js/jquery-3.1.1.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery-3.1.1.min.js"></script>
+
 </body>
 </html>
