added boost section

--- a/index.html
+++ b/index.html
@@ -111,10 +111,27 @@
 		</div><!-- container -->
 	</section><!-- optin -->
 
-
 	<!-- BOOST YOUR INCOME
 	================================================ -->
-	<section></section>
+	<section id="boost-income">
+		<div class="container">
+			<div class="section-header">
+				<img src="assets/img/icon-boost.png" alt="Chart">
+				<h2>How You Can Boost Your Income</h2>
+			</div><!-- section-header -->
+			<p class="lead">Woke enamel pin disrupt, helvetica stumptown fingerstache lyft umami PBR&amp;B green juice kickstarter iPhone vape brooklyn la croix. :</p>
+			<div class="row">
+				<div class="col-sm-6">
+					<h3>Vexillologist iceland migas</h3>
+					<p>Lumbersexual craft beer kickstarter, four dollar toast cardigan bicycle rights 8-bit crucifix vice art party snackwave plaid jianbing. Forage man bun austin raclette wolf fanny pack master cleanse, celiac poutine jianbing pabst health goth. Pop-up portland quinoa direct trade dreamcatcher. Swag lumbersexual whatever authentic, farm-to-table listicle craft beer helvetica ethical hell of fanny pack taxidermy synth venmo. Celiac etsy kombucha edison bulb lyft. Butcher freegan photo booth art party whatever banjo distillery meggings before they sold out, direct trade listicle flannel succulents glossier irony.</p>
+				</div><!-- col -->
+				<div class="col-sm-6">
+					<h3>Post-ironic pop-up echo park</h3>
+					<p>Seitan fixie glossier kogi art party. Narwhal af lumbersexual austin occupy meggings. Keytar plaid trust fund skateboard banh mi. Lumbersexual celiac neutra, humblebrag ennui butcher poutine austin hella. Banjo banh mi schlitz, everyday carry ennui street art subway tile thundercats scenester freegan.</p>
+				</div><!-- col -->
+			</div>
+		</div><!-- container -->
+	</section><!-- boost-income -->
 
 
 	<!-- WHO BENEFITS
