--- a/index.html
+++ b/index.html
@@ -136,7 +136,30 @@
 
 	<!-- WHO BENEFITS
 	================================================ -->
-	<section></section>
+	<section id="who-benefits">
+		<div class="container">
+			<div class="section-header">
+				<img src="assets/img/icon-pad.png" alt="Pad and Pencil">
+				<h2>Who Should Take This Course?</h2>
+			</div><!-- section-header -->
+			<div class="row">
+				<div class="col-sm-8 col-sm-offset-2">
+					<h3>Shoreditch &amp; Vexillologist iceland </h3>
+					<p>habby chic adipisicing green juice celiac 90's migas. Pinterest swag ennui bespoke fixie, kitsch poke tumblr air plant. Chambray mustache pickled ut, dolore YOLO semiotics activated charcoal meggings exercitation brooklyn. Kickstarter neutra lyft jean shorts vero sint. Flexitarian edison bulb vape, YOLO four dollar toast iceland sed synth portland heirloom actually twee PBR&amp;B shoreditch sint.</p>
+					<p>Tote bag normcore swag, health goth tacos tilde incididunt organic officia sartorial man bun. Intelligentsia hoodie neutra hella, migas fanny pack meh tumeric. Cronut bespoke air plant consequat, brunch direct trade minim DIY placeat microdosing occaecat aliqua. Chillwave aliquip keytar jean shorts trust fund meh succulents. Vero listicle scenester duis, <strong>keytar try-hard cray master cleanse single-origin coffee schlitz you probably haven't heard of them vegan</strong>.</p>
+					<h3>Fugiat</h3>
+					<p>Cronut bespoke air plant consequat, brunch direct trade minim DIY placeat microdosing occaecat aliqua. Chillwave aliquip keytar jean shorts trust fund meh succulents. Vero listicle scenester duis, keytar try-hard cray master cleanse single-origin coffee schlitz you probably haven't heard of them vegan.</p>
+					<p>YOLO messenger bag chillwave, beard snackwave DIY organic bicycle rights laborum. Tote bag bushwick cupidatat, cred commodo esse sriracha enim dreamcatcher iceland schlitz +1 aliqua officia non. Excepteur cold-pressed celiac laborum hell of live-edge.</p>
+					<h3>Chillwave</h3>
+					<p>Chambray heirloom authentic, mustache fingerstache photo booth umami kickstarter roof party wolf pop-up. Subway tile semiotics truffaut, poutine skateboard pabst hashtag. Bespoke before they sold out prism, farm-to-table poutine jianbing portland XOXO.</p>
+					<p>Portland trust fund craft beer kogi, semiotics fixie flannel mumblecore YOLO vaporware ennui fanny pack copper mug echo park stumptown. Chicharrones knausgaard coloring book, mlkshk viral everyday carry celiac la croix raclette intelligentsia.</p>
+					<h3>Hexagon</h3>
+					<p> Asymmetrical brunch master cleanse, air plant affogato slow-carb cornhole occupy leggings meditation cred letterpress venmo. <em>Austin dreamcatcher beard, plaid pinterest fam succulents tofu waistcoat.</em>. Cray hammock gochujang stumptown, locavore next level put a bird on it yr plaid twee authentic. Vaporware four loko chillwave messenger bag everyday carry.</p>
+					<p>Quinoa tousled migas, plaid snackwave ramps poke selfies mlkshk chartreuse iceland organic etsy polaroid bushwick. Chartreuse pug hoodie keytar kale chips williamsburg.</p>
+				</div><!-- col -->
+			</div><!-- row -->
+		</div><!-- container -->
+	</section><!-- who-benefits -->
 
 
 	<!-- COURSE FEATURES
