added features section

--- a/index.html
+++ b/index.html
@@ -202,7 +202,29 @@
 
 	<!-- PROJECT FEATURES
 	================================================ -->
-	<section></section>
+	<section id="project-features">
+		<div class="container">
+			<h2>Final Project Features</h2>
+			<p class="lead">Chambray heirloom authentic, mustache fingerstache photo booth umami kickstarter roof party wolf pop-up. Subway tile semiotics truffaut, poutine skateboard pabst hashtag. <strong>Bespoke before they sold out prism</strong> , farm-to-table poutine jianbing portland XOXO. Portland trust fund craft beer kogi, semiotics fixie flannel mumblecore YOLO vaporware ennui fanny pack copper mug echo park stumptown. </p>
+			<div class="row">
+				<div class="col-sm-4">
+					<img src="assets/img/icon-design.png" alt="Design">
+					<h3>Chicharrones &amp; Knausgaard</h3>
+					<p>Tumeric enamel pin vaporware blue bottle stumptown edison bulb, gochujang la croix twee af man braid etsy lyft.</p>
+				</div><!-- end col -->
+				<div class="col-sm-4">
+					<img src="assets/img/icon-code.png" alt="Code">
+					<h3>Cray &amp; Hammock</h3>
+					<p>Post-ironic swag pickled, vape affogato street art man bun wayfarers chartreuse narwhal fam. vexillologist jean shorts kombucha.</p>
+				</div><!-- end col -->
+				<div class="col-sm-4">
+					<img src="assets/img/icon-cms.png" alt="CMS">
+					<h3>Umami</h3>
+					<p>Scenester bushwick ethical, pickled humblebrag man braid gluten-free. Forage fixie pour-over, man bun literally four dollar toast.</p>
+				</div><!-- end col -->
+			</div><!-- row -->
+		</div><!-- container -->
+	</section><!-- project-features -->
 
 
 	<!-- VIDEO FEATURETTE
