--- a/index.html
+++ b/index.html
@@ -229,7 +229,16 @@
 
 	<!-- VIDEO FEATURETTE
 	================================================ -->
-	<section></section>
+	<section id="featurette">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-8 col-sm-offset-2">
+					<h2>Watch the Course Introduction</h2>
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/N8HqyuLBqnU" frameborder="0" allowfullscreen></iframe>
+				</div><!-- end col -->
+			</div><!-- row -->
+		</div><!-- container -->
+	</section><!-- featurette -->
 
 
 	<!-- INSTRUCTOR SECTION
