added instructor section

--- a/index.html
+++ b/index.html
@@ -243,7 +243,53 @@
 
 	<!-- INSTRUCTOR SECTION
 	================================================ -->
-	<section></section>
+	<section id="instructor">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-8 col-md-6">
+					<div class="row">
+						<div class="col-lg-8">
+							<h2>Your Instructor <small>Emma Stone</small></h2>
+						</div><!-- end col -->
+						<div class="col-lg-4">
+							<a href="https://twitter.com/EmmaStoneWeb" target="_blank" class="badge social twitter"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.facebook.com/Emma-Stone-459300464094268/" target="_blank" class="badge social facebook"><i class="fa fa-facebook"></i></a>
+							<a href="https://plus.google.com/+EmmaStoneWeb" target="_blank" class="badge social gplus"><i class="fa fa-google-plus"></i></a>
+						</div><!-- end col -->
+					</div><!-- row -->
+					<p class="lead">Brunch kickstarter hot chicken sriracha. Pickled leggings hashtag gochujang, man bun literally four dollar toast.</p>
+					<p>Chambray polaroid irony bespoke pork belly squid mustache. Vegan biodiesel gochujang, try-hard helvetica blue bottle cardigan vape semiotics unicorn chillwave marfa photo booth.</p>
+					<p>Normcore wolf copper mug XOXO, vexillologist activated charcoal literally gochujang viral etsy pour-over roof party lomo. Mumblecore iceland before they sold out paleo man bun activated charcoal.</p>
+					<p>Blue bottle bespoke lyft actually, live-edge prism single-origin coffee tote bag. Venmo health goth lo-fi, iPhone direct trade enamel pin cronut semiotics. Vegan biodiesel gochujang, try-hard helvetica blue bottle cardigan vape semiotics unicorn chillwave marfa photo booth.</p>
+					<hr>
+					<h3>Gluten-free <small>poutine copper mug mixtape blog</small></h3>
+					<div class="row">
+						<div class="col-xs-4">
+							<div class="num">
+								<div class="num-content">
+									41,000+ <span>students</span>
+								</div><!-- num-content -->
+							</div><!-- num -->
+						</div><!-- end col -->
+						<div class="col-xs-4">
+							<div class="num">
+								<div class="num-content">
+									568 <span>reviews</span>
+								</div><!-- num-content -->
+							</div><!-- num -->
+						</div><!-- end col -->
+						<div class="col-xs-4">
+							<div class="num">
+								<div class="num-content">
+									8 <span>courses</span>
+								</div><!-- num-content -->
+							</div><!-- num -->
+						</div><!-- end col -->
+					</div><!-- row -->
+				</div><!-- end col -->
+			</div><!-- row -->
+		</div><!-- container -->
+	</section><!-- instructor -->
 
 
 	<!-- TESTIMONIALS
