added testimonial section

--- a/index.html
+++ b/index.html
@@ -291,10 +291,65 @@
 		</div><!-- container -->
 	</section><!-- instructor -->
 
-
 	<!-- TESTIMONIALS
 	================================================ -->
-	<section></section>
+	<section id="kudos">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-8 col-sm-offset-2">
+					<h2>What People Are Saying About Brad</h2>
+					<!-- TESTIMONIAL -->
+					<div class="row testimonial">
+						<div class="col-sm-4">
+							<img src="assets/img/brennan.jpg" alt="Brennan">
+						</div><!-- end col -->
+						<div class="col-sm-8">
+							<blockquote>
+								Salvia literally chambray, drinking vinegar squid you probably haven't heard of them roof party waistcoat banh mi whatever quinoa cred fam pok pok green juice.
+								<cite>&mdash; Tilde seitan kale chips</cite>
+							</blockquote>
+						</div><!-- end col -->
+					</div><!-- row -->
+					<!-- TESTIMONIAL -->
+					<div class="row testimonial">
+						<div class="col-sm-4">
+							<img src="assets/img/ben.png" alt="Illustration of a man with a moustache">
+						</div><!-- end col -->
+						<div class="col-sm-8">
+							<blockquote>
+								Quinoa tousled migas, plaid snackwave ramps poke selfies mlkshk chartreuse iceland organic etsy polaroid bushwick. Chartreuse pug hoodie keytar kale chips williamsburg.
+								<cite>&mdash; Vexillologist VHS ugh pok pok</cite>
+							</blockquote>
+						</div><!-- end col -->
+					</div><!-- row -->
+					<!-- TESTIMONIAL -->
+					<div class="row testimonial">
+						<div class="col-sm-4">
+							<img src="assets/img/aj.png" alt="Illustration of a man with a beard">
+						</div><!-- end col -->
+						<div class="col-sm-8">
+							<blockquote>
+								Chambray heirloom authentic, mustache fingerstache photo booth umami kickstarter roof party wolf pop-up. Subway tile semiotics truffaut, poutine skateboard pabst hashtag.
+								<cite>&mdash; Bespoke before they sold out prism</cite>
+							</blockquote>
+						</div><!-- end col -->
+					</div><!-- row -->
+					<!-- TESTIMONIAL -->
+					<div class="row testimonial">
+						<div class="col-sm-4">
+							<img src="assets/img/ernest.png" alt="Illustration of a man with a goatee">
+						</div><!-- end col -->
+						<div class="col-sm-8">
+							<blockquote>
+								Letterpress occupy coloring book art party normcore, hexagon beard ugh glossier. Asymmetrical brunch master cleanse, air plant affogato slow-carb cornhole occupy leggings meditation cred letterpress venmo.
+								<cite>&mdash; Austin dreamcatcher beard</cite>
+							</blockquote>
+						</div><!-- end col -->
+					</div><!-- row -->
+				</div><!-- end col -->
+			</div><!-- row -->
+		</div><!-- container -->
+	</section><!-- kudos -->
 
 
 	<!-- SIGN UP SECTION
