--- a/index.html
+++ b/index.html
@@ -354,7 +354,16 @@
 
 	<!-- SIGN UP SECTION
 	================================================ -->
-	<section></section>
+	<section id="signup" data-type="background" data-speed="4">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6 col-sm-offset-3">
+					<h2>Are you ready to tak eyour coding skills to the <strong>next level</strong>?</h2>
+					<p><a href="#" class="btn btn-lg btn-block btn-success">Yes, sign me up!</a></p>
+				</div><!-- end col -->
+			</div><!-- row -->
+		</div><!-- container -->
+	</section><!-- signup -->
 
 
 	<!-- FOOTER
