fixed responsive with media queries

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<p class="lead">My Very Own Coded Responsive Website &amp; Custom WordPress Websites with Boostrap</p>
 						<div id="price-timeline">
 							<div class="price active">
-								<h4>Pre-Launch<small>Ends soon!</small></h4>
+								<h4>Pre-Launch<small>Ends soon!&nbsp;</small></h4>
 								<span>$149</span>
 							</div><!-- price -->
 							<div class="price">
@@ -100,7 +100,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-8">
-					<p class="lead"><strong>Subscribe to our mailing list.</strong>We'll send something special as a thank you.</p>
+					<p class="lead"><strong>Subscribe to our mailing list.</strong> We'll send something special as a thank you.</p>
 				</div><!-- col -->
 				<div class="col-sm-4">
 					<button class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">
