added sidebar and widgets

--- a/blog.html
+++ b/blog.html
@@ -92,6 +92,46 @@
 					</div><!-- post-excerpt -->
 				</article>
 			</main><!-- content -->
+			<!-- SIDEBAR
+			================================================ -->
+			<aside class="col-sm-4">
+				<div class="widget">
+					<h4>Join our Mailing List</h4>
+					<p>Keep up-to-date with the lateste news, and we'll <strong>send you something special as a thank you</strong></p>
+					<button class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#myModal">Click here to subscribe</button>
+				</div><!-- widget -->
+				<div class="widget">
+					<form class="search-form" role="form">
+						<label for="sidebar-search" class="sr-only">Search</label>
+						<input type="text" id="sidebar-search" placeholder="Search the blog..">
+					</form>
+				</div><!-- widget -->
+				<div class="widget">
+					<h4>About Boostrap to wordPress</h4>
+					<p>Butcher man braid direct trade, hot chicken food truck typewriter fashion axe hella beard bushwick poutine chambray. Pitchfork whatever blog, single-origin coffee godard tacos food truck bespoke copper mug you probably haven't heard of them. Letterpress occupy coloring book art party normcore, hexagon beard ugh glossier.</p>
+				</div><!-- widget -->
+				<div class="widget">
+					<h4>Recent Posts</h4>
+					<ul>
+						<li><a href="">Blog post #1</a></li>
+						<li><a href="">Blog post #2</a></li>
+						<li><a href="">Blog post #3</a></li>
+						<li><a href="">Blog post #4</a></li>
+						<li><a href="">Blog post #5</a></li>
+					</ul>
+				</div><!-- widget -->
+				<div class="widget">
+					<h4>Categories</h4>
+					<ul>
+						<li><a href="">Category #1</a></li>
+						<li><a href="">Category #2</a></li>
+						<li><a href="">Category #3</a></li>
+						<li><a href="">Category #4</a></li>
+						<li><a href="">Category #5</a></li>
+						<li><a href="">Category #6</a></li>
+					</ul>
+				</div>
+			</aside>
 		</div><!-- row -->
 	</div><!-- container -->
 
