added comments section

--- a/post.html
+++ b/post.html
@@ -91,6 +91,68 @@
 							<p>Butcher man braid direct trade, hot chicken food truck typewriter fashion axe hella beard bushwick poutine chambray. Pitchfork whatever blog, single-origin coffee godard tacos food truck bespoke copper mug you probably haven't heard of them.</p>
 						</div><!-- post-body -->
 				</article><!-- article -->
+
+				<div id="comments">
+					<div class="comments-wrap">
+						<h3>4 comments</h3>
+						<!-- These comments will have an image and more information when we use WP-->
+						<ol class="comments-list">
+							<li class="comment">
+								<h4>John Smith <small>&bul; Aug 12, 2014</small></h4>
+								<div class="comment-body">
+									<p>Butcher man braid direct trade, hot chicken food truck typewriter fashion axe hella beard bushwick poutine chambray. Pitchfork whatever blog, single-origin coffee godard tacos food truck bespoke copper mug you probably haven't heard of them.</p>
+								</div><!-- comment-body -->
+								<ol class="children">
+									<li class="comment">
+										<h4>Chris McCooper <small>&bul; Aug 12, 2014</small></h4>
+										<div class="comment-body">
+											<p>Butcher man braid direct trade, hot chicken food truck typewriter fashion axe hella beard bushwick poutine chambray. Pitchfork whatever blog, single-origin coffee godard tacos food truck bespoke copper mug you probably haven't heard of them.</p>
+										</div><!-- comment-body -->
+										<ol class="children">
+											<li class="comment">
+												<h4>Johnee Dee <small>&bul; Aug 12, 2014</small></h4>
+												<div class="comment-body">
+													<p>Butcher man braid direct trade, hot chicken food truck typewriter fashion axe hella beard bushwick poutine chambray. Pitchfork whatever blog, single-origin coffee godard tacos food truck bespoke copper mug you probably haven't heard of them.</p>
+												</div><!-- comment-body -->
+											</li><!-- comment -->
+										</ol><!-- children -->
+									</li><!-- comment -->
+								</ol><!-- children -->
+							</li><!-- comment -->
+							<li class="comment">
+								<h4>Jane Smith <small>&bul; Aug 12, 2014</small></h4>
+								<div class="comment-body">
+									<p>Butcher man braid direct trade, hot chicken food truck typewriter fashion axe hella beard bushwick poutine chambray. Pitchfork whatever blog, single-origin coffee godard tacos food truck bespoke copper mug you probably haven't heard of them.</p>
+								</div><!-- comment-body -->
+							</li><!-- comment -->
+						</ol><!-- comments-list -->
+						<div id="leave-comment">
+							<h3>Leave a comment</h3>
+							<form>
+								<p>Your email address will not be published. Required fiels are marked <span class="required">*</span></p>
+								<p class="comment-form-author">
+									<label for="author">Name *</label>
+									<input type="text" id="author">
+								</p>
+								<p class="comment-form-email">
+									<label for="email">Email *</label>
+									<input type="text" id="email">
+								</p>
+								<p class="comment-form-url">
+									<label for="url">Website</label>
+									<input type="text" id="url">
+								</p>
+								<p class="comment-form-comment">
+									<label for="comment">comment</label>
+									<textarea id="comment" cols="45" rows="8"></textarea>
+								</p>
+								<p class="comment-form-submit">
+									<input type="submit" name="submit">
+								</p>
+							</form>
+						</div><!-- leave-comment -->
+					</div><!-- comments-wrap -->
+				</div><!-- comments -->
 			</div><!-- end col -->
 			
 			<!-- SIDEBAR
